2005-10-06  Wim Taymans  <wim@fluendo.com>

	* ext/amrnb/amrnbdec.c:
	Mark invalid frame sizes

	* ext/mad/gstmad.c: (gst_mad_init), (gst_mad_chain):
	UNUSABLE is not to be used here, just push out stuff so
	probes can continue linking or making the pad usable.

2005-10-05  Michael Smith <msmith@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_sink_event),
	(gst_rmdemux_src_event), (gst_rmdemux_validate_offset),
	(find_seek_offset_bytes), (find_seek_offset_time),
	(gst_rmdemux_perform_seek), (gst_rmdemux_src_query),
	(gst_rmdemux_loop), (gst_rmdemux_fourcc_isplausible),
	(gst_rmdemux_chain), (gst_rmdemux_send_event),
	(gst_rmdemux_add_stream), (gst_rmdemux_parse_packet):
	  Improve seeking error-resilience.
	  General improvements in error handling.

2005-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to development

=== release 0.9.3 ===

2005-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* README:
	* configure.ac:
	  releasing 0.9.3, "Athos"

2005-09-30  Michael Smith <msmith@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_src_event),
	(gst_rmdemux_perform_seek), (gst_rmdemux_src_query),
	(gst_rmdemux_change_state), (gst_rmdemux_loop),
	(gst_rmdemux_fourcc_isplausible), (gst_rmdemux_chain),
	(gst_rmdemux_send_event), (gst_rmdemux_add_stream),
	(gst_rmdemux_parse_packet):
	* gst/realmedia/rmdemux.h:
	  Sanity checking, and fix some minor memory leaks

2005-09-29  Michael Smith <msmith@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_src_event),
	(gst_rmdemux_perform_seek), (gst_rmdemux_loop),
	(gst_rmdemux_send_event), (gst_rmdemux_add_stream),
	(gst_rmdemux_parse_mdpr), (gst_rmdemux_parse_packet):
	Real demuxer fixes. Make it more bulletproof against bad data,
	identify a few more stream types.
	Fix seeking so that it works (at least with the seek example program;
	it still fails with totem).

2005-09-26  Wim Taymans  <wim@fluendo.com>

	* gst/mpegaudioparse/gstmpegaudioparse.c: